# karship

./: README.md  ast_nodes.py  cli.py  interpreter.py  kar  kar.cmd  kar.spec  karship.json  lexer.py  main.ksharp  parser.py  pyproject.toml
.github/workflows/: publish-to-pypi.yml
.venv_packaging_test/: pyvenv.cfg
.venv_packaging_test/Scripts/: activate  activate.bat
karship/: __init__.py  pyproject.toml
karship-vscode/: README.md  language-configuration.json  package.json
karship-vscode/icons/: theme.json
karship-vscode/syntaxes/: karship.tmLanguage.json
karship.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
karship/ksharp/: README.md  __init__.py  __main__.py  ast_nodes.py  example.k  example.kpp  ksharp_interpreter.py  parser.py  runtime.py
karship/ksharp/libs/: hello.ksharp
karship/tests/: test_ksharp_language.py
ksharp/: README.md  ast_nodes.py  bot.ksharp  cli.py  discord_bot.ksharp  example.k  example.kpp  example.ksharp  hello_world.ksharp  kar_cli.py  ksharp_interpreter.py  lexer.py  music_functions.ksharp  package_manager.py  parser.py  runtime.py  tokens.py
ksharp/assets/: vscode_ksharp_theme.json
ksharp/modules/: __init__.py  anticheat_module.py  discord_module.py  game_module.py
libs/: discord.ksharp  ytdlp.ksharp
python-dist/: karship-0.1.0-py3-none-any.whl
runtime/: __init__.py  monitor.py  system_detection.py
tests/: test_ksharp_language.py
tools/: build-standalone.ps1  build-standalone.sh  install-kar-cli.ps1  install-karship-vscode-extension.ps1  install-vscode-ksharp-icons.ps1  register-ksharp-file-icons.ps1
